# zcrawl

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
tests/: __init__.py  test_basic.py
zcrawl/: __init__.py  __main__.py
zcrawl/core/: __init__.py  project.py
zcrawl/crawlers/: __init__.py  base_crawler.py  http_crawler.py
zcrawl/extractors/: __init__.py  selector_extractor.py
zcrawl/models/: __init__.py  page.py  url.py
zcrawl/resources/: stylesheet.py
zcrawl/resources/icons/: __init__.py
zcrawl/ui/: __init__.py  content_preview_widget.py  crawl_control_widget.py  export_dialog.py  extraction_designer_widget.py  link_tree_widget.py  log_console_widget.py  main_window.py  project_dialog.py  settings_dialog.py  url_input_widget.py
zcrawl/utils/: __init__.py  request_throttler.py  user_agents.py
